# libstrophe

./: CMakeLists.txt
examples/: CMakeLists.txt
src/: CMakeLists.txt  tls_openssl.c
tests/: CMakeLists.txt  test_string.c
